--- a/style/style.css
+++ b/style/style.css
@@ -27,7 +27,7 @@ Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
 [class*="icon-"] {
 */
-.icon-CAMERA_10PX_02, .icon-camera_ORIGINAL, .icon-CAMERA_10PX, .icon-grid_3, .icon-grid_2, .icon-grid, .icon-android_02, .icon-android, .icon-grid-2, .icon-grid-3, .icon-grid-4, .icon-grid-5 {
+.icon-edit_ok, .icon-trash_ok, .icon-share_ok, .icon-grid_ok, .icon-camara_ok, .icon-box_ok {
 	font-family: 'icomoon';
 	speak: none;
 	font-style: normal;
@@ -37,39 +37,21 @@ you can use the generic selector below, but it's slower:
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
-.icon-CAMERA_10PX_02:before {
-	content: "\e009";
-}
-.icon-camera_ORIGINAL:before {
+.icon-edit_ok:before {
 	content: "\e000";
 }
-.icon-CAMERA_10PX:before {
-	content: "\e002";
-}
-.icon-grid_3:before {
+.icon-trash_ok:before {
 	content: "\e001";
 }
-.icon-grid_2:before {
+.icon-share_ok:before {
+	content: "\e002";
+}
+.icon-grid_ok:before {
 	content: "\e003";
 }
-.icon-grid:before {
+.icon-camara_ok:before {
 	content: "\e004";
 }
-.icon-android_02:before {
+.icon-box_ok:before {
 	content: "\e005";
-}
-.icon-android:before {
-	content: "\e006";
-}
-.icon-grid-2:before {
-	content: "\e007";
-}
-.icon-grid-3:before {
-	content: "\e008";
-}
-.icon-grid-4:before {
-	content: "\e00a";
-}
-.icon-grid-5:before {
-	content: "\e00b";
 }
