--- a/style/style.css
+++ b/style/style.css
@@ -55,3 +55,38 @@ you can use the generic selector below, but it's slower:
 .icon-box_ok:before {
 	content: "\e005";
 }
+
+
+html { font-size: 10px; }
+
+body {
+	color: #444;
+	background: #fff;
+}
+
+* {
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+.glyph {
+	font-size: 3rem;
+	float: left;
+	text-align: center;
+	background: #eee;
+  margin: 2rem 0 0 2rem;
+  width: 6rem;
+  border-radius: 0.5rem;
+}
+
+.centered {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h3 { margin: 1rem 2rem; font-size: 1.6rem; }
+
+.fs1 { margin: 1rem; }
